sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:23: error: value ++ is not a member of Int
      j++
       ^