sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  
  
  var test=false;
  var j=0;
  while(!test)
  {
    var min=getValeur(0)
    test=true;
    
    for(i<-0 to getNombreValeurs()-1)
    {
      if(min<getValeur(i))
      {
        min=getValeur(i)
        test=false
      }
    }
    if(!test)
    {
      setValeur(j,min)
      j++
    }
  }
}